# kosenfest2020

./: README.md  README.txt  test.cpp
bigdrea/kaiten/: kaiten.ino
bigdrea/led/: led.ino
bigdrea/mota/: mota.ino
clock/: CMakeLists.txt  README.md  test.cpp  tmp.txt
only_side/: only_side.ino
only_top/: only_top.ino
readimage/: CMakeLists.txt  README.md  img2arr.txt  reboot.jpg_small  test.cpp
